# rosace-python

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/R/: README.md
src/rosace/: __init__.py  assay.py  preprocessing.py  rosace.py  rosette.py  run_rosace.py  run_rosette.py  score.py  slr.py  stan_models.py  utils.py  visualization.py
src/rosace/stan/: README.md  growth_nopos.stan  growth_pos.stan  growth_pos_blosum.stan  growth_pos_blosum_act.stan  growth_pos_blosum_act_nosyn.stan  growth_pos_blosum_nosyn.stan
tests/: test_assay.py  test_output_score_utils.py  test_preprocessing.py  test_rosace.py  test_slr.py
vignettes/: intro_rosace.ipynb  intro_rosace_aa.ipynb  intro_rosace_oct1.ipynb  rosette_simulation.ipynb  run_rosace_oct1.ipynb  run_rosace_oct1_executed.ipynb  visualizing_rosace_scores.ipynb
