[project]
name = "rosace"
version = "0.1.0"
description = "Statistical inference for growth-based deep mutational scanning screens"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "cmdstanpy>=1.2",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "pre-commit>=3.0", "black>=24.0", "isort>=5.0"]
viz = ["matplotlib>=3.7", "seaborn>=0.12"]
vignettes = ["matplotlib>=3.7", "seaborn>=0.12", "jupyter>=1.0", "nbformat>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosace"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
